# sea-orm-db-catalog-demo

./: Cargo.toml  sqlite.db
src/: entities_extension.rs  main.rs  migrator.rs  repl.rs  session.rs
src/entities/: README.md  mod.rs  my_column.rs  my_database.rs  my_object.rs  my_table.rs  my_view.rs  my_view_dependency.rs  prelude.rs
src/migrator/: m20231019_114514_toydb_init.rs
