[package]
name = "sea-orm-db-catalog-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
futures-util = "0.3"
rustyline = "12.0.0"
sea-orm = { version = "0.12.3", features = ["sqlx", "sqlx-sqlite", "macros"] }
sea-orm-migration = "0.12.3"
sqlparser = { version = "0.38.0", features = ["visitor"] }
sqlx = { version = "0.7", features = ["runtime-tokio"] }
tokio = { version = "1.33.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
